# vlc-hs

./: LICENSE  README.md  stack.yaml  vlc-hs.cabal
src/Sound/: VLC.hs
src/Sound/VLC/: Internal.hs
test/: Spec.hs
