name:                vlc-hs
version:             0.1.0.0
synopsis:            Haskell bindings to libvlc
-- description:
homepage:            https://github.com/githubuser/vlc-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Plamann
maintainer:          mitchell.plamann@gmail.com
copyright:           2017 Mitchell Plamann
category:            Sound
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.VLC
  other-modules:       Sound.VLC.Internal
  build-depends:       base >= 4.7 && < 5
  includes:            vlc/vlc.h
  extra-libraries:     vlc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vlc-hs

test-suite vlc-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vlc-hs
                     , unbounded-delays
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-langauge:    Haskell2010